[package]
edition = "2021"
name = "test-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
handlebars = "4.3.6"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
num_cpus = "1.15.0"
threadpool = "1.8.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
